CSS: Fix teaser wrapping inside articles on directory entries:
- Sadly, commit a2081064 broke article teasers under directory entries.
- Since we embed the views directly inside the dir entry, they inherit styles.
- So we need a more specific style for the articles to undo the "fix".

--- a/web/themes/custom/breema2/css/email.css
+++ b/web/themes/custom/breema2/css/email.css
@@ -1022,6 +1022,11 @@ ol.location-results .field--name-field-upcoming-events > .field__item {
   padding: 1em 0 0 0;
 }
 
+.node--type-directory-entry .node--type-article .field--name-body {
+  clear: none;
+  padding: 0;
+}
+
 .block-essence-footer-block .action {
   max-width: 250px;
   display: block;
