--- a/web/themes/custom/breema2/css/styles.css
+++ b/web/themes/custom/breema2/css/styles.css
@@ -1077,6 +1077,11 @@ ol.location-results .field--name-field-upcoming-events > .field__item {
   padding: 1em 0 0 0;
 }
 
+.node--type-directory-entry .node--type-article .field--name-body {
+  clear: none;
+  padding: 0;
+}
+
 .block-essence-footer-block .action {
   max-width: 250px;
   display: block;
